Migrated roles management from Adobe Cairngorm to GraniteDS Tide client framework
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@868 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -54,7 +54,7 @@
 
     <granite:SecureRemoteObject
         id="userService"
-        destination="userService"
+        destination="userService2"
         showBusyCursor="true"/>
 
 <!--
