--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
@@ -22,6 +22,14 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" show="init()">
+
+    <mx:Metadata>
+        [Name("roleManagementView")]
+        [ManagedEvent(name="LOAD_ALL_USERS")]
+        [ManagedEvent(name="LOAD_ALL_ROLES")]
+        [ManagedEvent(name="SAVE_ROLE")]
+    </mx:Metadata>
+
     <mx:Script>
         <![CDATA[
         	import org.openwms.web.flex.client.event.UserEvent;
@@ -38,14 +46,19 @@
             import mx.events.ListEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
             import org.openwms.web.flex.client.event.RoleEvent;
+            import org.granite.tide.spring.Context;
+            [In]
             [Bindable]
-            private var modelLocator:ModelLocator = ModelLocator.getInstance();
+            public var modelLocator:ModelLocator;            
+            [In]
+            public var tideContext:Context;
             [Bindable]
             private var selected:Role;
 
             private function init():void
             {
-                new RoleEvent(RoleEvent.LOAD_ALL_ROLES).dispatch();
+                dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
+                tideContext.raiseEvent(RoleEvent.LOAD_ALL_ROLES);
             }
 
             private function onRowClick(event:ListEvent):void
@@ -80,13 +93,13 @@
                 }
                 var event:RoleEvent = new RoleEvent(RoleEvent.SAVE_ROLE);
                 event.data = selected;
-                event.dispatch();
+                dispatchEvent(event);
             }
             
             private function addUsers():void
             {
             	if (modelLocator.allUsers.length == 0) {
-            		new UserEvent(UserEvent.LOAD_ALL_USERS).dispatch();
+            		dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
             	}
                 var pop:AssignUsersDialog = AssignUsersDialog(PopUpManager.createPopUp(this, AssignUsersDialog, true));
                 pop.assigned = new ArrayCollection(selected.users.toArray());
@@ -110,7 +123,7 @@
 
             private function refresh():void
             {
-                new RoleEvent(RoleEvent.LOAD_ALL_ROLES).dispatch();
+                dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
             }
             
             private function formatUser(item:*):String {
