--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
@@ -25,7 +25,7 @@
 	creationComplete="init()">
 
     <mx:Metadata>
-        [Name("userListRenderer")]
+        [Name]
         [ManagedEvent(name="LOAD_ALL_USERS")]
     </mx:Metadata>
 
