--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -23,18 +23,24 @@
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
 
+    <mx:Metadata>
+        [Name]
+        [ManagedEvent(name="APP_LOGOUT")]
+    </mx:Metadata>
+
     <mx:Script>
     	<![CDATA[
-    		import org.openwms.web.flex.client.event.EventBroker;
     		import org.openwms.web.flex.client.event.ApplicationEvent;
-    		[Bindable]
-    		private var currentUser:String = "Anonymous";
-    		private var broker:EventBroker = EventBroker.getInstance();
+            import org.granite.tide.spring.Identity;
+
+            [In]
+            [Bindable]
+            public var identity:Identity;
     		
     		private function logout(event:MouseEvent = null):void {
+                identity.logout();
     			var e:ApplicationEvent = new ApplicationEvent(ApplicationEvent.LOGOUT);
-    			//broker.dispatchEvt(e);
-    			e.dispatch();
+    			dispatchEvent(e);
     		}
     	]]>
     </mx:Script>
@@ -42,11 +48,11 @@
         <mx:Image height="100%" source="@Embed('assets/images/openwms_header.png')" />
         <mx:VBox height="100%" width="100%" horizontalAlign="right" verticalAlign="bottom">
             <mx:HBox width="100%" horizontalAlign="right">
-                <mx:LinkButton label="{currentUser}" color="#E9EBEB" cornerRadius="4"/>
+                <mx:LinkButton label="{identity.username}" color="#E9EBEB" cornerRadius="4"/>
                 <mx:Image width="16" source="@Embed('assets/images/icons/user--anonymous.png')"/>
             </mx:HBox>
             <mx:HBox width="100%" horizontalAlign="right">
-                <mx:LinkButton label="logout" color="#E9EBEB" click="logout()"/>
+                <mx:LinkButton label="logout" color="#E9EBEB" click="logout();"/>
                 <mx:Image width="16" source="@Embed('assets/images/icons/logout.png')"/>
             </mx:HBox>
         </mx:VBox>
