Added GraniteDS Tide security support
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@871 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -51,7 +51,7 @@
             </mx:MenuBar>
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-            <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.authenticated ? DisplayUtility.getView(modelLocator.actualView, commonViewStack) : DisplayUtility.getView(SwitchScreenEvent.SHOW_STARTSCREEN, commonViewStack)}">
+            <mx:ViewStack id="commonViewStack" selectedIndex="{DisplayUtility.getView(modelLocator.actualView, commonViewStack)}">
                 <view:LocationView name="locationView" />
                 <view:LocationTypeView name="locationTypeView" />
                 <view:LocationGroupView name="locationGroupView" />
