--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
@@ -31,6 +31,7 @@
         [ManagedEvent(name="DELETE_MODULE")]
         [ManagedEvent(name="LOAD_MODULE")]
         [ManagedEvent(name="UNLOAD_MODULE")]
+        [ManagedEvent(name="LOAD_ALL_USERS")]
     </mx:Metadata>
 
     <mx:Script>
@@ -45,9 +46,7 @@
              * Load all users when the view is loaded.
              */
             private function init():void {
-                trace("Trigger to load all users");
                 dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
-                tideContext.raiseEvent(UserEvent.LOAD_ALL_USERS);
             }
         ]]>
     </mx:Script>
